[gd_scene load_steps=2 format=3 uid="uid://brivckyjfjwuy"]

[ext_resource type="Script" path="res://system/menu/option_menu.gd" id="1_vxlhi"]

[node name="option_menu" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_vxlhi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="btn_display" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Display"

[node name="btn_control" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Control"

[node name="btn_audio" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="btn_exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="button_down" from="VBoxContainer/btn_display" to="." method="_on_btn_display_button_down"]
[connection signal="button_down" from="VBoxContainer/btn_control" to="." method="_on_btn_control_button_down"]
[connection signal="button_down" from="VBoxContainer/btn_audio" to="." method="_on_btn_audio_button_down"]
[connection signal="button_down" from="VBoxContainer/btn_exit" to="." method="_on_btn_exit_button_down"]
